# qrdetect

./: Makefile.in  README.md  config.h.in  configure  configure.ac
debian/: changelog  control  rules
src/: Makefile  main.cpp
